--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="section about-me" data-section="section0">
             <div class="container">
                 <div class="section-heading">
-                    <img src="./assets/images/priv.png" alt="">
+                    <img class="insertTiagoimg " src="./assets/images/priv.png" alt="">
                     <!-- <h2>Privacidade e Segurança</h2>-->
                     <div class="line-dec"></div>
                 </div>
@@ -120,7 +120,7 @@
 
                                     <!-- Modal -->
                                     <div class="modal fade" id="ModalProtonVpn" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered" role="document">
+                                        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                                             <div class="modal-content">
                                                 <div class="modal-header bg-secondary text-white">
 
@@ -158,7 +158,7 @@
 
                                     <!-- Modal -->
                                     <div class="modal fade" id="ModalTorBrowser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered" role="document">
+                                        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                                             <div class="modal-content">
                                                 <div class="modal-header bg-secondary text-white">
 
@@ -216,7 +216,7 @@
     
                     <!-- Modal -->
                     <div class="modal fade" id="ModalTails" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                             <div class="modal-content">
                                 <div class="modal-header bg-secondary text-white">
     
@@ -252,7 +252,7 @@
 
                 <!-- Modal -->
                 <div class="modal fade" id="ModalVPNeTor" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-header bg-secondary text-white">
 
@@ -288,7 +288,7 @@
 
                 <!-- Modal -->
                 <div class="modal fade" id="ModalDuckDuckgo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-header bg-secondary text-white">
 
@@ -324,7 +324,7 @@
 
                 <!-- Modal -->
                 <div class="modal fade" id="ModalProxychains" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-header bg-secondary text-white">
 
@@ -446,14 +446,39 @@
     <section class="section contact-me" data-section="section4">
         <div class="container">
             <div class="section-heading">
-                <h2>LGPD</h2>
+                <h2>Legislação
+                </h2>
                 <div class="line-dec"></div>
-                <span>LGPD é a sigla para Lei Geral de Proteção de Dados do Brasil, 
+                <!-- <span>LGPD é a sigla para Lei Geral de Proteção de Dados do Brasil, 
                   sancionada em agosto de 2018. A LGPD estabelece regras sobre coleta, armazenamento, tratamento e compartilhamento de dados pessoais, impondo mais proteção e penalidades
                    para o não cumprimento.</span>
+
+                <p></p>-->
+
+                <div class="col-md-4">
+                    <div class="left-text">
+                        <h2>Liberdade na WEB</h2>
+                        <p></p>
+                    </div>
+                </div>
+                <p>A internet é um meio de comunicação incrivel,porem ela tambem pode ser usada para coletar seus dados e informaçoes.Grandes empresas como facebook sobrevivem vendendo dados de seus usuarios.hacker tambem podem conseguir acesso as suas informaçoes
+                    facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender dessa grande selva binaria Texto.. A internet é um meio de comunicação incrivel,porem ela tambem pode ser usada para coletar seus dados e
+                    informaçoes.Grandes empresas como facebook sobrevivem vendendo dados de seus usuarios.hacker tambem podem conseguir acesso as suas informaçoes facilmente aqui voce vai ver as ultimas noticias sobre vazamento de dados e como se defender
+                    dessa grande selva binaria Texto..
+                </p>
+                <br><br><br>
+                <div class="col-md-1">
+                    <div class="left-text">
+                        <h2>LGPD</h2>
+                        <p></p>
+                    </div>
+                </div>
+                <p>A lei Geral de Proteção de Dados Pessoais (LGPD) é uma norma legal, a Lei Ordinária Federal n.º 13.709, de 14 de agosto de 2018, que entrou em vigor a partir de 28 de dezembro de 2018 e terá vigência plena a partir de 1º de agosto de 2021,
+                    e tem como objetivo regular a forma como os dados pessoais devam ser utilizados</p>
                 <p></p>
                 <div class="white-button"><a href="https://www.gov.br/governodigital/pt-br/seguranca-e-protecao-de-dados/guias/guia_lgpd.pdf" target="_blank">LGPD Oficial</a></div>
             </div>
+
             <div class="col-md-l6">
                 <div class="service-item">
                     <h4>lei 1</h4>
@@ -467,14 +492,9 @@
 
                         <!-- Modal -->
                         <div class="modal fade" id="Modal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                                 <div class="modal-content">
-                                    <div class="modal-header bg-secondary text-white">
 
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                              </button>
-                                    </div>
                                     <div class="modal-body bg-secondary text-white">
                                         Texto 1 sobre Lgpd
                                     </div>
@@ -501,7 +521,7 @@
 
                         <!-- Modal -->
                         <div class="modal fade" id="Modal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header bg-secondary text-white">
 
@@ -535,7 +555,7 @@
 
                         <!-- Modal -->
                         <div class="modal fade" id="Modal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header bg-secondary text-white">
 
@@ -569,7 +589,7 @@
 
                         <!-- Modal -->
                         <div class="modal fade" id="Modal4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header bg-secondary text-white">
 
@@ -603,7 +623,7 @@
 
                         <!-- Modal -->
                         <div class="modal fade" id="Modal5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header bg-secondary text-white">
 
