--- a/contato/index.html
+++ b/contato/index.html
@@ -46,11 +46,10 @@
                             <a href="http://anonnimato.ddns.net">
                                 <h3>voltar</h3>
                             </a>
-                            <br>
-                            <!-- <img class="teste22 tm-nav-link223" src="./img/giphy (2).gif" alt="">-->
-                            <a class="tm-nav-link22" href="https://docs.google.com/forms/d/1u0gW0pdSxtqxwSvlNEsvJP6kcj3THlgMrYyzzUunX0k/viewform?edit_requested=true" target="_blank">
+                            <!-- <img class="teste22 tm-nav-link223" src="./img/giphy (2).gif" alt="">
+                            <a class="tm-nav-link22err" href="https://docs.google.com/forms/d/1u0gW0pdSxtqxwSvlNEsvJP6kcj3THlgMrYyzzUunX0k/viewform?edit_requested=true" target="_blank">
                                 <h5>ENQUETE</h5>
-                            </a>
+                            </a>-->
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
