--- a/contato/index.html
+++ b/contato/index.html
@@ -78,7 +78,8 @@
                                                     <a class="fab fa-facebook" href="https://www.facebook.com/alexandre.j.filho" target="_blank"></a>
                                                 </div>
                                                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                    <p>Estudante de ADS No IFSC,Programador Front-End Junior,Produtor Musical</p>
+                                                    <i>Estudante de ADS No IFSC-Canoinhas</i>
+                                                    <i>Trabalho de Informática, Ética e Sociedade.</i>
                                                 </div>
                                             </div>
 
@@ -106,7 +107,8 @@
                                                     <a class="fab fa-instagram" href="https://www.instagram.com/portesborges/" target="_blank"></a>
                                                 </div>
                                                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                    <p>Estudante de ADS No IFSC</p>
+                                                    <i>Estudante de ADS No IFSC-Canoinhas</i>
+                                                    <i>Trabalho de Informática, Ética e Sociedade.</i>
                                                 </div>
                                             </div>
 
@@ -121,7 +123,22 @@
                                             <div class="product__bg"></div>
                                         </div>
                                         <div class="product__description">
-                                            info Guilherme
+                                            <div class="row mb-3">
+                                                <div class="col-12">
+                                                    <h2 class="tm-page-title">Guilherme Modesto</h2>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                                                    <img src="img/guilherme.png" class="img-fluid mb-3">
+                                                    <p></p>
+                                                    <a class="fab fa-instagram" href="https://www.instagram.com/turato_modesto" target="_blank"></a>
+                                                </div>
+                                                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                                                    <i>Estudante de ADS No IFSC-Canoinhas</i>
+                                                    <i>Trabalho de Informática, Ética e Sociedade.</i>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -134,7 +151,7 @@
                                             <div class="product__bg"></div>
                                         </div>
                                         <div class="product__description">
-                                            info Leonardo
+                                            Aguardando informação até 10/08
                                         </div>
                                     </div>
                                 </div>
