--- a/contato/index.html
+++ b/contato/index.html
@@ -147,7 +147,7 @@
                                     <div class="product">
                                         <div class="tm-nav-link">
                                             <i class="fas fa-user fa-3x tm-nav-icon"></i>
-                                            <span class="tm-nav-text">Leonardo</span>
+                                            <span class="tm-nav-text">?</span>
                                             <div class="product__bg"></div>
                                         </div>
                                         <div class="product__description">
