--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <section class="section about-me" data-section="section0">
             <div class="container">
                 <div class="section-heading">
-                    <img class="insertTiagoimg " src="./assets/images/priv3.png" alt="">
-                    <!-- <h2>Privacidade e Segurança</h2>-->
+                   <!--  <img class="insertTiagoimg " src="./assets/images/priv3.png" alt="">-->
+                    <h2>Privacidade e Segurança</h2>
                     <div class="line-dec"></div>
                 </div>
                 <div class="row">
